--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
         <td><%= elemento.matricula %></td>
         <td><%= elemento.data %></td>
         <td><%= elemento.status %></td>
-        <td class="button"><a class="modify" href="/pessoa/<%=elemento.id%>/edit"><button id="modify" class="btn btn-primary">Modify</button></a><a class="modify" href="/users/<%=elemento.id%>/delete"><button id="delete" class="btn btn-primary">Delete</button></a></td>
+        <td class="button"><a class="modify" href="/pessoa/<%=elemento.id%>/edit"><button id="modify" class="btn btn-primary">Modify</button></a><a class="modify" href="/pessoa/<%=elemento.id%>/delete"><button id="delete" class="btn btn-primary">Delete</button></a></td>
     </tr>
     <% } %>
 </table>
