--- a/views/create.ejs
+++ b/views/create.ejs
@@ -59,8 +59,8 @@
       <label for="exampleInputPassword1">Matricula</label>
       <input type="text" class="form-control" id="exampleInputPassword1" name="matricula" placeholder="Matricula" value="">
     </div>
-    <button type="submit" class="btn btn-primary" id="button1">Submit</button>
-    <a href="/pessoa"><button type="button" class="btn btn-primary" id="button2">Cancel</button></a>
+    <button type="submit" class="btn btn-outline-success" id="button1">Submit</button>
+    <a href="/pessoa"><button type="button" class="btn btn-danger" id="button2">Cancel</button></a>
   </form>
 </body>
 </html>
