--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -56,8 +56,8 @@
             <label for="exampleInputPassword1">Data de Nascimento</label>
             <input type="text" class="form-control" id="exampleInputPassword1" name="data" placeholder="Data" value="<%=pessoa.data%>">
           </div>
-          <button type="submit" class="btn btn-primary" id="button1">Submit</button>
-          <a href="/pessoa"><button type="button" class="btn btn-primary" id="button2">Cancel</button></a>
+          <button type="submit" class="btn btn-outline-success" id="button1">Submit</button>
+          <a href="/pessoa"><button type="button" class="btn btn-danger" id="button2">Cancel</button></a>
         </form>
 </body>
 </html>
