--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,66 +1,155 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Cadastrar Alunos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+  <!-- Bootstrap Datepicker CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css"
+    rel="stylesheet">
+
+  <!-- jQuery (necessário para o Bootstrap Datepicker) -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Bootstrap Datepicker JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+
+  <style>
+    label {
+      font-weight: bold;
+    }
+
+    .datepicker{
+      padding: 20px; 
+      font-weight: 200;
+      background-color: rgb(24, 24, 24);
+      border-radius: 20px;
+    }
+
+    .datepicker *{
+      color: white;
+    }
+
+    .datepicker th{
+      padding: 20px; 
+      font-weight: 200;
+    }
+
+    .datepicker .datepicker-switch:hover, .datepicker .next:hover, .datepicker .prev:hover, .datepicker tfoot tr th:hover{
+      background-color: rgb(20, 20, 20);
+    }
+
+    .datepicker table tr td.day.focused, .datepicker table tr td.day:hover{
+      background-color: rgb(20, 20, 20);
+      
+    }
+
+    .datepicker table tr td span.focused, .datepicker table tr td span:hover{
+      background-color: rgb(20, 20, 20);
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      color: white;
+      background-color: rgb(24, 24, 24);
+      min-height: 100vh;
+      margin: 0;
+    }
+
+    form {
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgb(49, 49, 49);
+      width: 600px;
+      border-radius: 20px;
+      box-shadow: 0px 7px 0px rgba(0, 0, 0, 0.5)
+    }
+
+    option{
+      background-color: rgb(49, 49, 49);
+      color: white; 
+      border: none; 
+    }
+
+    option:focus{
+      background-color:  rgba(0, 0, 0, 0.5);
+    }
+
+    option:hover{
+      background-color:  rgba(0, 0, 0, 0.5);
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    #button1 {
+      margin-top: 20px;
+    }
+
+    #button2 {
+      margin-top: 20px;
+      margin-left: 10px;
+    }
+  </style>
 </head>
-<style>
-  label{
-    font-weight: bold; 
-  }
-  body{
-    display: flex; 
-    justify-content: center;
-    color: white; 
-    background-color: rgb(24, 24, 24);
-  }
-  form{
-    padding: 20px; 
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(49, 49, 49);
-    width: 600px;
-    border: 1px solid black; 
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px; 
-  } 
-  #button1{
-    margin-top: 20px;
-  }
-  #button2{
-    margin-top: 20px;
-    margin-left: 10px; 
-  }
-</style>
+
 <body>
-  <form action="/pessoa" method="post">
+  <form action="/index" method="post">
     <div class="form-group">
-      <label for="exampleInputEmail1">Name</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name" placeholder="Name" value="">
-      <small id="emailHelp" class="form-text text-muted"></small>
+      <label for="name">Nome completo</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="Nome do aluno" required>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Email</label>
-      <input type="email" class="form-control" id="exampleInputPassword1" name="email" placeholder="Email" value="">
+      <label for="email">Email</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Status</label>
-      <input type="text" class="form-control" id="exampleInputPassword1" name="status" placeholder="Status" value="">
+      <label for="status">Status</label>
+      <select class="form-control" id="status" name="status" required>
+        <option value="Matriculado">Matriculado</option>
+        <option value="Desmatriculado">Desmatriculado</option>
+        <option value="Aguardando">Aguardando</option>
+      </select>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Data de Nascimento</label>
-      <input type="text" class="form-control" id="exampleInputPassword1" name="data" placeholder="Data" value="">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Matricula</label>
-      <input type="text" class="form-control" id="exampleInputPassword1" name="matricula" placeholder="Matricula" value="">
+      <label for="data">Data de Nascimento</label>
+      <input type="text" class="form-control" id="data" name="data" placeholder="Selecione a data de nascimento" required>
     </div>
     <button type="submit" class="btn btn-outline-success" id="button1">Submit</button>
-    <a href="/pessoa"><button type="button" class="btn btn-danger" id="button2">Cancel</button></a>
+    <a href="/index" class="btn btn-danger" id="button2">Cancel</a>
   </form>
 </body>
+<!-- Bootstrap Datepicker JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+
+<!-- Bootstrap Datepicker pt-BR (idioma português Brasil) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/locales/bootstrap-datepicker.pt-BR.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+      $('#data').datepicker({
+        format: 'yyyy-mm-dd',
+        language: 'pt-BR',
+        autoclose: true,
+        todayHighlight: true,
+        endDate: 'today',  // Define a data máxima como hoje
+        zIndexOffset: 9999,  // Coloca o calendário sobre outros elementos
+        container: 'body',   // Coloca o calendário dentro do corpo da página
+      });
+    });
+</script>
+
+
 </html>
