--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,11 +70,11 @@
   <table>
     <tr>
         <th>ID</th>
-        <th>Name</th>
+        <th>Nome</th>
         <th>Email</th>
-        <th>Resistration</th>
-        <th>Date of Birth</th>
-        <th>Status</th>
+        <th>Matricula</th>
+        <th>Data de Nascimento</th>
+        <th>Situação</th>
         <th></th>
     </tr>
     <% for (let elemento of pessoa) { %>
@@ -85,7 +85,7 @@
         <td><%= elemento.matricula %></td>
         <td><%= elemento.data %></td>
         <td><%= elemento.status %></td>
-        <td class="button"><a class="modify" href="/pessoa/<%=elemento.id%>/edit"><button id="modify" class="btn btn-outline-success">Modify</button></a><a class="modify" href="/pessoa/<%=elemento.id%>/delete"><button id="delete" class="btn btn-danger">Delete</button></a></td>
+        <td class="button"><a class="modify" href="/index/<%=elemento.id%>/edit"><button id="modify" class="btn btn-outline-success">Modify</button></a><a class="modify" href="/index/<%=elemento.id%>/delete"><button id="delete" class="btn btn-danger">Delete</button></a></td>
     </tr>
     <% } %>
 </table>
@@ -95,7 +95,7 @@
 <br>
 <br>
 </div>
-<form action="/pessoa/seach" method="post">
+<form action="/index/seach" method="post">
     <label for="exampleInputEmail1">Seach By Name</label>
     <div class="style2">
     <div class="form-group">
@@ -103,10 +103,10 @@
       <small id="emailHelp" class="form-text text-muted"></small>
     </div>
     <button type="submit" class="btn btn-success" id="button1">Submit</button>
-    <a href="/pessoa"><index type="button" class="btn btn-success" id="button2">Search Reset</index></a>
+    <a href="/index"><index type="button" class="btn btn-success" id="button2">Search Reset</index></a>
   </div>
   </form>
-<a href="/pessoa/create"><button id="create" class="btn btn-success">Create</button></a> 
+<a href="/index/create"><button id="create" class="btn btn-success">Create</button></a> 
 <br>
 </body>
 </html>
